@@ -1,3 +1,7 @@
+2009-07-21  Michiel Roos <michiel@netcreators.com>
+
+	* #10194: Cannot confirm "delete file" operation
+	
 2009-07-04  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug #10817: Upload doesn't work for admins under 4.3
